# mutli_agent

./: .gitignore  CLAUDE.md  CODE_REVIEW_2026-04-21.md  LICENSE  README.md  __init__.py  __main__.py  main.py  orchestrator.py  pyproject.toml  requirements.txt
agents/: __init__.py  ba_agent.py  base_agent.py  critic_agent.py  design_agent.py  dev_agent.py  investigation_agent.py  pm_agent.py  rule_optimizer_agent.py  skill_designer_agent.py  techlead_agent.py  test_agent.py
analyzer/: __init__.py  cost_history.py  outcome_logger.py  outcome_pipeline.py  regression_classifier.py  score_adjuster.py  score_renderer.py  session_report.py  skill_outcome_logger.py
cli/: ux.py
context/: __init__.py  context_builder.py  git_helper.py  health_check.py  maintain_detector.py  output_paths.py  project_context_reader.py  project_detector.py  refresh.py  scoped_reader.py
core/: __init__.py  config.py  doctor.py  exceptions.py  io_utils.py  logging.py  message_bus.py  paths.py  plan_detector.py  state_version.py  text_utils.py  token_tracker.py  ux.py
learning/: __init__.py  audit_log.py  integrity_rules.py  revise_history.py  rule_evolver.py  rule_lifecycle.py  rule_runner.py  runners.py  score_adjuster.py  shadow_runner.py  skill_optimizer.py  skill_runner.py  skill_selector.py  task_metadata.py  task_models.py  trends.py
pipeline/: __init__.py  clarification.py  critic_gating.py  critic_loop.py  parsers.py  pm_router.py  session_runner.py  skill_selector.py  task_based_runner.py  task_metadata.py  task_models.py
reporting/: __init__.py  html_report.py  trend_report.py
(+136 files in other folders)
